[package]
name = "advent_of_code_2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = true
strip = "debuginfo"
opt-level = 3

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
thiserror = "1.0.50"
